--- a/ClassLibrary/ClassLibrary.csproj
+++ b/ClassLibrary/ClassLibrary.csproj
@@ -43,7 +43,7 @@
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="Rules.cs" />
         <Compile Include="Validator.cs" />
-        <Compile Include="ValidatorBuilder.cs" />
+        <Compile Include="ConcreteValidatorsBuilders.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
