--- a/ClassLibraryForFirst/ClassLibraryForFirst.csproj
+++ b/ClassLibraryForFirst/ClassLibraryForFirst.csproj
@@ -8,7 +8,7 @@
         <OutputType>Library</OutputType>
         <AppDesignerFolder>Properties</AppDesignerFolder>
         <RootNamespace>ClassLibrary</RootNamespace>
-        <AssemblyName>ClassLibrary</AssemblyName>
+        <AssemblyName>ClassLibraryForFirst</AssemblyName>
         <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
     </PropertyGroup>
