--- a/First/First.csproj
+++ b/First/First.csproj
@@ -32,8 +32,8 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
-        <Reference Include="ClassLibrary, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\ClassLibrary\bin\Debug\ClassLibrary.dll</HintPath>
+        <Reference Include="ClassLibraryForFirst, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\ClassLibraryForFirst\bin\Debug\ClassLibraryForFirst.dll</HintPath>
         </Reference>
         <Reference Include="System" />
         <Reference Include="System.Core" />
