--- a/ClassLibraryForFirst/ClassLibraryForFirst.csproj
+++ b/ClassLibraryForFirst/ClassLibraryForFirst.csproj
@@ -40,10 +40,10 @@
     <ItemGroup>
         <Compile Include="AggregateException.cs" />
         <Compile Include="Builder.cs" />
+        <Compile Include="Chain.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="Rules.cs" />
         <Compile Include="Validator.cs" />
-        <Compile Include="ConcreteValidatorsBuilders.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
