--- a/Second/Second.csproj
+++ b/Second/Second.csproj
@@ -48,7 +48,10 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Doctor.cs" />
+        <Compile Include="Human.cs" />
         <Compile Include="InfectBranch.cs" />
+        <Compile Include="ObservationRoom.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
