I don't know why this fucking binding in user control is not updating

--- a/ThirdPartTwo_Elements/ThirdPartTwo_Elements.csproj
+++ b/ThirdPartTwo_Elements/ThirdPartTwo_Elements.csproj
@@ -47,6 +47,7 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="Models\SpinnerModel.cs" />
+        <Compile Include="ModelViews\Commands\RelayCommand.cs" />
         <Compile Include="ModelViews\SpinnerViewModel.cs" />
         <Compile Include="Properties\Annotations.cs" />
         <Compile Include="Views\App.xaml.cs">
