--- a/ThirdPartTwo_Elements/ThirdPartTwo_Elements.csproj
+++ b/ThirdPartTwo_Elements/ThirdPartTwo_Elements.csproj
@@ -13,6 +13,7 @@
         <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
         <WarningLevel>4</WarningLevel>
         <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+        <LangVersion>9</LangVersion>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
         <PlatformTarget>AnyCPU</PlatformTarget>
@@ -48,15 +49,19 @@
     <ItemGroup>
         <Compile Include="Models\DialogHostModel.cs" />
         <Compile Include="Models\MessageDialogModel.cs" />
+        <Compile Include="Models\NumericKeyboardModel.cs" />
         <Compile Include="Models\SpinnerDialogModel.cs" />
         <Compile Include="Models\SpinnerModel.cs" />
         <Compile Include="ModelViews\BaseLib\BaseViewModel.cs" />
+        <Compile Include="ModelViews\BaseLib\BaseViewModelNavigation.cs" />
         <Compile Include="ModelViews\BaseLib\Converters.cs" />
         <Compile Include="ModelViews\BaseLib\ConverterBase.cs" />
         <Compile Include="ModelViews\BaseLib\MultiConverterBase.cs" />
+        <Compile Include="ModelViews\BaseLib\NavigationManager.cs" />
         <Compile Include="ModelViews\Commands\RelayCommand.cs" />
         <Compile Include="ModelViews\DialogHostViewModel.cs" />
         <Compile Include="ModelViews\MessageDialogViewModel.cs" />
+        <Compile Include="ModelViews\NumericKeyboardViewModel.cs" />
         <Compile Include="ModelViews\SpinnerDialogViewModel.cs" />
         <Compile Include="ModelViews\SpinnerViewModel.cs" />
         <Compile Include="Properties\Annotations.cs" />
@@ -73,6 +78,9 @@
         </Compile>
         <Compile Include="Views\MessageDialog.xaml.cs">
           <DependentUpon>MessageDialog.xaml</DependentUpon>
+        </Compile>
+        <Compile Include="Views\NumericKeyboard.xaml.cs">
+          <DependentUpon>NumericKeyboard.xaml</DependentUpon>
         </Compile>
         <Compile Include="Views\Spinner.xaml.cs">
           <DependentUpon>Spinner.xaml</DependentUpon>
@@ -111,6 +119,7 @@
         <SubType>Designer</SubType>
       </Page>
       <Page Include="Views\MessageDialog.xaml" />
+      <Page Include="Views\NumericKeyboard.xaml" />
       <Page Include="Views\Spinner.xaml" />
       <Page Include="Views\SpinnerDialog.xaml" />
     </ItemGroup>
